# nlink-lab

./: .gitattributes  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NLINK-CRATE-BUG-REPORT.md  NLINK-LAB-FEATURE-REQUEST-RESPONSE.md  README.md  justfile  nlink-0.19-feedback.md  nlink-0.19-realignment.md  nlink-feedback.md  nlink-issues-found.md  nlink-lab-feedback.md  nlink-upstream-asks.md
.github/workflows/: ci.yml
bins/lab/: Cargo.toml  README.md
bins/lab/src/: cli.rs  color.rs  daemon.rs  main.rs  output.rs  rendering.rs  util.rs
bins/lab/src/commands/: apply.rs  capture.rs  containers.rs  daemon_cmd.rs  deploy.rs  destroy.rs  diagnose.rs  diff.rs  exec.rs  export.rs  graph.rs  impair.rs  init.rs  inspect.rs  metrics.rs  mod.rs  process.rs  shell.rs  status.rs  test.rs  validate.rs  wait.rs
bins/nlink-lab-backend/: Cargo.toml
bins/nlink-lab-backend/src/: collector.rs  handlers.rs  main.rs
bins/topoviewer/: Cargo.toml
bins/topoviewer/src/: app.rs  canvas.rs  layout.rs  main.rs  zenoh_client.rs
crates/nlink-lab/: Cargo.toml
crates/nlink-lab-macros/: Cargo.toml
crates/nlink-lab-macros/src/: lib.rs
crates/nlink-lab-shared/: Cargo.toml
crates/nlink-lab-shared/src/: lib.rs  messages.rs  metrics.rs  topics.rs
crates/nlink-lab/fuzz/: Cargo.toml
crates/nlink-lab/fuzz/corpus/parse/: container.nll  firewall.nll  simple.nll  spine-leaf.nll  vlan-trunk.nll  vxlan-overlay.nll  wan-impairment.nll
crates/nlink-lab/fuzz/fuzz_targets/: fuzz_lex.rs  fuzz_parse.rs
crates/nlink-lab/src/: benchmark.rs  builder.rs  capture.rs  container.rs  deploy.rs  diff.rs  dns.rs  error.rs  helpers.rs  impair_parse.rs  ipfunc.rs  lib.rs  parser.rs  portability.rs  proc_stat.rs  render.rs  running.rs  scenario.rs  state.rs  subnet_pool.rs  test_helpers.rs  test_runner.rs  types.rs  validator.rs  watch.rs  wifi.rs
crates/nlink-lab/src/parser/: mod.rs  toml.rs
crates/nlink-lab/src/parser/nll/: ast.rs  lexer.rs  lower.rs  mod.rs  parser.rs
crates/nlink-lab/src/templates/: mod.rs
crates/nlink-lab/tests/: docs_examples.rs  integration.rs  stress.rs
docs/: ARCHITECTURE.md  CLI_IMPROVEMENT_REPORT.md  COMPARISON.md  CONTAINER_IMPROVEMENT_REPORT.md  DEEP_ANALYSIS_REPORT.md  DNS_DHCP_REPORT.md  HARNESS_GUIDE.md  MARKET_RESEARCH_REPORT.md  NLINK_FEATURE_REQUEST_MOUNT_NS.md  NLINK_FEATURE_REQUEST_WIPHY_NETNS.md  NLINK_GAPS_REPORT.md  NLINK_LAB.md  NLINK_LAB_READINESS_REPORT.md  NLL_DEEP_ANALYSIS_V2.md  NLL_DEEP_REVIEW.md  NLL_DSL_DESIGN.md  NLL_IMPROVEMENT_REPORT.md  NLL_PAIN_POINTS_REPORT.md  PARSER_ANALYSIS.md  PROJECT_ANALYSIS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  nlink-nftables-batch-bug.md
docs/cli/: README.md  apply.md  capture.md  completions.md  containers.md  daemon.md  deploy.md  destroy.md  diagnose.md  diff.md  exec.md  export.md  graph.md  impair.md  import.md  init.md  inspect.md  ip.md  kill.md  logs.md  metrics.md  ps.md  pull.md  render.md  restart.md  shell.md  spawn.md  stats.md  status.md  test.md  validate.md  wait-for.md  wait.md
docs/cookbook/: README.md  bridge-vlan-trunk.md  ci-matrix-sweep.md  healthcheck-depends-on.md  iperf3-benchmark.md  lab-portability.md  macvlan-host-bridge.md  multi-tenant-wan.md  nftables-firewall.md  p2p-partition.md  parametric-imports.md  rust-integration-test.md  satellite-mesh.md  vrf-multitenant.md  wireguard-mesh.md
docs/json-schemas/: README.md  deploy.schema.json  impair-show.schema.json  layered-diff.schema.json  layered-diff.v2.schema.json  proc-stat.schema.json  ps.schema.json  spawn.schema.json  status-lab.schema.json  status-list.schema.json  status-scan.schema.json
docs/plans/: 040-nlink-lab-topology-types.md  041-nlink-lab-validator.md  042-nlink-lab-deployer.md  043-nlink-lab-cli.md  050-advanced-interface-types.md  051-phase3-advanced-features.md  052-phase4-ecosystem.md  060-nll-parser.md  070-topoviewer.md  071-live-metrics-dashboard.md  072-lab-templates.md  080-bugfixes-and-safety.md  081-code-quality.md  082-nll-completeness.md  083-validator-and-deploy.md  084-cli-ux.md  085-test-coverage.md  086-feature-flags-and-publishing.md  087-topology-composition.md  088-remove-toml-format.md  090-hardening.md  091-user-documentation.md  092-structured-errors.md  093-nll-expressions.md  093-nll-v2.md  094-nll-composition.md  094-nll-ergonomics.md  095-container-core.md  095-nll-composition.md  096-container-lifecycle.md  097-parser-hardening.md  098-nll-patterns.md  099-production-readiness.md  100-validate-and-errors.md  101-nll-syntax-cleanup.md  102-cli-quality.md  103-container-cli.md  104-polish.md  105-dns-phase2.md  106-macvlan-ipvlan.md  (+71 more)
editors/tree-sitter-nll/: .gitignore  grammar.js  package.json  tree-sitter.json
editors/tree-sitter-nll/queries/: folds.scm  indents.scm
editors/tree-sitter-nll/src/: grammar.json  node-types.json  parser.c
editors/tree-sitter-nll/test/corpus/: basics.txt  control_flow.txt  networking.txt
editors/vscode-nll/: language-configuration.json  package.json
editors/vscode-nll/syntaxes/: nll.tmLanguage.json
editors/zed-nll/: extension.toml
editors/zed-nll/languages/nll/: config.toml  highlights.scm
examples/: asymmetric.nll  benchmark.nll  container-advanced.nll  container-lifecycle.nll  container.toml  datacenter-fabric.nll  dns.nll  firewall.nll  firewall.toml  infra-c2-a18-a9.nll  integration-testing.nll  iperf-benchmark.nll  iperf-benchmark.toml  ipv6-simple.nll  ipvlan.nll  list-iteration.nll  macvlan.nll  management-network.nll  mesh.nll  mesh.toml  multi-profile.nll  multi-site.nll  nat.nll  pattern-mesh.nll  pattern-ring.nll  pattern-star.nll  router.nll  router.toml  scenario.nll  simple.toml  site-grouping.nll  spine-leaf.nll  spine-leaf.toml  subnet-pools.nll  vlan-trunk.nll  vlan-trunk.toml  vrf-multitenant.nll  vrf-multitenant.toml  vxlan-overlay.toml  wan-impairment.toml  (+3 more)
examples/cookbook/: multi-tenant-wan.nll  p2p-partition.nll  satellite-mesh.nll
examples/imports/: a18.nll  a9.nll  base-network.nll  composed.nll  full-site.nll  parametric-ring.nll  simple-site.nll  use-ring.nll
