[workspace]
resolver = "2"
members = [
    "crates/nlink-lab",
    "crates/nlink-lab-macros",
    "crates/nlink-lab-shared",
    "bins/lab",
    "bins/nlink-lab-backend",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/p13marc/nlink-lab"
authors = ["Marc Pardo <p13marc@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "net", "io-util", "sync"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
libc = "0.2"

# Crypto (WireGuard key generation)
x25519-dalek = { version = "2", features = ["static_secrets"] }
base64 = "0.22"
getrandom = "0.3"
time = { version = "0.3", features = ["formatting"] }

# Zenoh pub/sub
zenoh = { version = "1.8", features = ["unstable"] }
zenoh-ext = "1.8"

# Networking (git dependency during development, crates.io for release)
nlink = { git = "https://github.com/p13marc/nlink", features = ["full"] }

# Workspace crates
nlink-lab = { path = "crates/nlink-lab" }
nlink-lab-macros = { path = "crates/nlink-lab-macros" }
nlink-lab-shared = { path = "crates/nlink-lab-shared" }
