[package]
name = "nlink-lab-cli"
description = "CLI for nlink-lab network lab engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["networking", "testing", "namespaces", "lab", "cli"]
categories = ["command-line-utilities", "network-programming"]
readme = "../../README.md"

[[bin]]
name = "nlink-lab"
path = "src/main.rs"

[dependencies]
nlink-lab = { workspace = true }
netring = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
libc = { workspace = true }
atty = "0.2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zenoh = { workspace = true }
nlink-lab-shared = { workspace = true }
miette = { version = "7", features = ["fancy"] }
