[package]
name = "nlink-lab-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Zenoh backend daemon for nlink-lab — publishes live metrics and handles RPC"

[[bin]]
name = "nlink-lab-backend"
path = "src/main.rs"

[dependencies]
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
nlink-lab = { workspace = true }
nlink-lab-shared = { workspace = true }
nlink = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
anyhow = "1"
