[package]
name = "nlink-lab-topoviewer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Interactive topology visualizer for nlink-lab"

[[bin]]
name = "nlink-lab-topoviewer"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
nlink-lab = { workspace = true }
nlink-lab-shared = { workspace = true }
zenoh = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
png = "0.17"
