[package]
name = "nlink-lab-shared"
description = "Shared types for nlink-lab backend/frontend Zenoh communication"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["networking", "zenoh", "lab"]
categories = ["network-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
