[package]
name = "nlink-lab"
description = "Network lab engine for creating isolated, reproducible network topologies using Linux namespaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["networking", "testing", "namespaces", "lab", "topology"]
categories = ["network-programming", "development-tools::testing"]
readme = "../../README.md"

[dependencies]
nlink = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
logos = "0.15"
x25519-dalek = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
time = { workspace = true }
winnow = "0.7"
miette = { version = "7", features = ["fancy"] }
nlink-lab-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
libc = { workspace = true }
tempfile = "3"
