[package]
name = "nlink-lab"
description = "Network lab engine for creating isolated, reproducible network topologies using Linux namespaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["networking", "testing", "namespaces", "lab", "topology"]
categories = ["network-programming", "development-tools::testing"]
readme = "../../README.md"

[features]
default = ["wireguard", "containers"]
wireguard = ["dep:x25519-dalek", "dep:base64", "dep:getrandom"]
containers = []
# Opt-in: keep `nlink_lab::capture::compile_bpf_filter` (and the
# CLI's `--filter "<tcpdump expr>"` flag) wired to a `tcpdump -dd`
# shell-out. Requires `tcpdump` + `libpcap` on PATH at runtime.
# Default builds use the typed `netring::BpfFilter::builder()` API
# instead — pure Rust, no external tooling.
legacy-tcpdump-filter = []

[dependencies]
nlink = { workspace = true }
tokio = { workspace = true }
# Plan 159b — `watch` module consumes nlink's
# `ResyncStream` through tokio_stream's `StreamExt::next()`.
tokio-stream = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
logos = "0.15"
time = { workspace = true }
winnow = "0.7"
miette = { version = "7", features = ["fancy"] }
nlink-lab-macros = { workspace = true }

# Lab archive (.nlz) — Plan 153 export / import.
tar = "0.4"
flate2 = "1"
sha2 = "0.10"

# `LabCapture` writes pcaps to a temp dir (Plan 154 capture-on-failure).
tempfile = "3"

# `wait_for_log_line` regex matching for `spawn --wait-log` (Plan 155 PR E).
regex = "1"

netring = { workspace = true }

# Feature-gated dependencies
x25519-dalek = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
libc = { workspace = true }
tempfile = "3"
